# RoboticArm

./: .drone.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  pinout.txt  roboticarm.code-workspace
src/: main.rs
workspace/: Cargo.toml
workspace/.devcontainer/: Dockerfile  devcontainer.json
workspace/cross_compile/: Cargo.toml
workspace/cross_compile/robotic_arm/: Cargo.toml
workspace/cross_compile/robotic_arm/src/: main.rs_old
workspace/robotic_arm/: Cargo.toml
workspace/robotic_arm/control/: Cargo.toml
workspace/robotic_arm/control/src/: main.rs
