[package]
edition = "2021"
name = "robotic_arm"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "0.2.7"
panic-halt= "0.2.0"

fugit = "0.3.6"

cytron_maker_pi_rp2040 = "0.5"