[package]
edition = "2021"
name = "robotic_arm_control"
authors = ["Arnix <arnaud@olearo-hote.eu>"]
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-monotonic = "1.3"
fugit = "0.3.7"

cytron_maker_pi_rp2040 = "0.6.0"
embedded-hal ="0.2.7"
mpu6050 = "0.1.6"